[gd_scene load_steps=11 format=3 uid="uid://s50n8u1wym83"]

[ext_resource type="Script" path="res://Scenes/Main.gd" id="1"]
[ext_resource type="PackedScene" path="res://Scenes/Game.tscn" id="2"]
[ext_resource type="Texture2D" uid="uid://bd2ok8evag6po" path="res://Art/Player/playerShip2_orange.png" id="4"]
[ext_resource type="Texture2D" uid="uid://c5gmmcpojbmjx" path="res://Art/GUI/configuration.png" id="5"]
[ext_resource type="Texture2D" uid="uid://mjfljhypyal2" path="res://Art/GUI/sfx_on.png" id="6"]
[ext_resource type="Texture2D" uid="uid://07eu8w08qcw8" path="res://Art/GUI/sfx_off.png" id="7"]
[ext_resource type="Texture2D" uid="uid://ilnwrotsccxv" path="res://Art/GUI/keys.png" id="8"]
[ext_resource type="Texture2D" uid="uid://mrpiyaqjldeg" path="res://Art/GUI/tutorial.png" id="9"]
[ext_resource type="Texture2D" uid="uid://7ym4pevdbohu" path="res://Art/GUI/about.png" id="10"]

[sub_resource type="SpriteFrames" id="4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7")
}],
"loop": false,
"name": &"sfx_off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6")
}],
"loop": false,
"name": &"sfx_on",
"speed": 5.0
}]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 5.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")
Game = ExtResource("2")

[node name="Screen" type="Control" parent="."]
anchors_preset = 0

[node name="Up" type="Control" parent="Screen"]
anchors_preset = 0

[node name="Title" type="Label" parent="Screen/Up"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 262.0
offset_top = 257.0
offset_right = 365.0
offset_bottom = 280.0
grow_horizontal = 2
text = "Slide Shooter"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighScore" type="Label" parent="Screen/Up"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 370.0
offset_top = 464.0
offset_right = 398.0
offset_bottom = 487.0
grow_horizontal = 2
grow_vertical = 0
text = "100"
vertical_alignment = 1

[node name="Label" type="Label" parent="Screen/Up/HighScore"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -147.0
offset_top = 3.0
offset_right = -71.0
offset_bottom = 26.0
grow_horizontal = 2
text = "highscore"
horizontal_alignment = 1

[node name="Play" type="Button" parent="Screen/Up"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 252.0
offset_top = 815.0
offset_right = 372.0
offset_bottom = 898.0
grow_horizontal = 2
grow_vertical = 0
icon = ExtResource("4")
flat = true

[node name="Down" type="Control" parent="Screen"]
anchors_preset = 0

[node name="Settings" type="Button" parent="Screen/Down"]
layout_mode = 0
offset_left = 511.0
offset_top = 1021.0
offset_right = 567.0
offset_bottom = 1077.0
icon = ExtResource("5")
flat = true

[node name="sfx" type="Button" parent="Screen/Down/Settings"]
visible = false
layout_mode = 0
flat = true

[node name="sfx" type="AnimatedSprite2D" parent="Screen/Down/Settings/sfx"]
position = Vector2(5.98393, 3.41943)
sprite_frames = SubResource("4")
animation = &"sfx_on"
centered = false

[node name="Store" type="Button" parent="Screen/Down"]
layout_mode = 0
offset_left = 248.0
offset_top = 1013.0
offset_right = 304.0
offset_bottom = 1069.0
icon = ExtResource("8")
flat = true

[node name="tutorial" type="Button" parent="Screen/Down"]
layout_mode = 0
offset_left = 127.0
offset_top = 1016.0
offset_right = 183.0
offset_bottom = 1072.0
icon = ExtResource("9")
flat = true

[node name="about" type="Button" parent="Screen/Down"]
layout_mode = 0
offset_left = 382.0
offset_top = 1011.0
offset_right = 438.0
offset_bottom = 1067.0
icon = ExtResource("10")
flat = true

[connection signal="pressed" from="Screen/Up/Play" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Screen/Down/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Screen/Down/Settings/sfx" to="." method="_on_sfx_pressed"]
[connection signal="pressed" from="Screen/Down/Store" to="." method="_on_Store_pressed"]
[connection signal="pressed" from="Screen/Down/tutorial" to="." method="_on_tutorial_pressed"]
